Admin dashboard y arreglo de vistas

--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -595,7 +595,7 @@
                     
                     <div class="plan-options">
                         <div class="plan-option">
-                            <input type="radio" id="plan-instantaneo" name="PlanVisibilidad" value="instantaneo" data-price="2500" data-plan-name="Posteo instantáneo">
+                            <input type="radio" id="plan-instantaneo" name="Formulario.PlanVisibilidad" value="1" data-price="2500" data-plan-name="Posteo instantáneo">
                             <label for="plan-instantaneo" class="plan-card">
                                 <div class="plan-content">
                                     <h3>Posteo instantáneo</h3>
@@ -609,7 +609,7 @@
                         </div>
 
                         <div class="plan-option">
-                            <input type="radio" id="plan-super" name="PlanVisibilidad" value="super" data-price="9500" data-plan-name="Súper visible">
+                            <input type="radio" id="plan-super" name="Formulario.PlanVisibilidad" value="2" data-price="9500" data-plan-name="Súper visible">
                             <label for="plan-super" class="plan-card">
                                 <div class="plan-content">
                                     <h3>Súper visible <span class="plan-addon">+ posteo instantáneo</span></h3>
@@ -626,7 +626,7 @@
                         </div>
 
                         <div class="plan-option">
-                            <input type="radio" id="plan-ultra" name="PlanVisibilidad" value="ultra" data-price="12900" data-plan-name="Ultra visible">
+                            <input type="radio" id="plan-ultra" name="Formulario.PlanVisibilidad" value="3" data-price="12900" data-plan-name="Ultra visible">
                             <label for="plan-ultra" class="plan-card">
                                 <div class="plan-content">
                                     <h3>Ultra visible <span class="plan-addon">+ posteo instantáneo</span></h3>
@@ -645,7 +645,7 @@
                         </div>
 
                         <div class="plan-option">
-                            <input type="radio" id="plan-profesional" name="PlanVisibilidad" value="profesional" data-price="47500" data-plan-name="Fotografía profesional">
+                            <input type="radio" id="plan-profesional" name="Formulario.PlanVisibilidad" value="4" data-price="47500" data-plan-name="Fotografía profesional">
                             <label for="plan-profesional" class="plan-card">
                                 <div class="plan-content">
                                     <h3>Fotografía profesional</h3>
@@ -730,8 +730,6 @@
                     
                     <div class="payment-tabs">
                         <div class="payment-tab active" data-tab="tarjeta">Tarjeta de débito/crédito</div>
-                        <div class="payment-tab" data-tab="paypal">Paypal</div>
-                        <div class="payment-tab" data-tab="sinpe">Sinpe móvil</div>
                     </div>
 
                     <div class="payment-content">
