--- a/AutoClick/Pages/TerminosCondiciones.cshtml
+++ b/AutoClick/Pages/TerminosCondiciones.cshtml
@@ -19,7 +19,7 @@
 
 <body>
     <!-- Header -->
-    @Html.Partial("~/Pages/Shared/_Header.cshtml")
+    <partial name="~/Pages/Shared/_Header.cshtml" />
 
     <!-- Términos y Condiciones Content -->
     <div class="terminos-container">
