--- a/AutoClick/Pages/PoliticaPrivacidad.cshtml
+++ b/AutoClick/Pages/PoliticaPrivacidad.cshtml
@@ -19,7 +19,7 @@
 
 <body>
     <!-- Header -->
-    @Html.Partial("~/Pages/Shared/_Header.cshtml")
+    <partial name="~/Pages/Shared/_Header.cshtml" />
 
     <!-- Breadcrumb Navigation -->
     <div class="breadcrumb-container">
